@@ -29,6 +29,8 @@ To be released as 0.11.4.
 * bug 712: GnuTLS works on https://www-s.uiuc.edu/[]
 * fix active and passive FTP over IPv6
 * bug 978: Python's webbrowser.open_new_tab(URL) works since now
+* minor bug 54, Debian bug 338402: don't force the terminal to 8 bits
+  with no parity
 * minor bug 951 in user SMJS: garbage-collect SMJS objects on 'File ->
   Flush all caches' to work around their holding cache entries busy
 * minor bug 396: never show empty filename in the what-to-do dialog
